--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
   <body>
     <div class="header">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more-inf"
+      <a class="details"
           href="https://goal-life.com/page/method/matrix-eisenhower">
           Want more details?</a>
     </div>
     <div class="main">
-      <p id="top-section-for-adding-element-to-list">
+      <p id="add-item">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+        <div class="task-row">
           <input id="new-task"class="task" type="text">
           <button>Add</button>
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
+      <ul id="todo-list list">
+        <li class="item">
           <input type="checkbox">
           <label class="task">Pay Bills</label>
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
-        <li class="edit-mode">
+        <li class="edit-mode item">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
@@ -38,8 +38,8 @@
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
+      <ul id="completed">
+        <li class="item">
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
