--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="todo-list list">
+      <ul id="todo-list" class="list">
         <li class="item">
           <input type="checkbox">
           <label class="task">Pay Bills</label>
@@ -38,7 +38,7 @@
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed">
+      <ul id="completed" class="todo-list">
         <li class="item">
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
