--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="header">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="logo">
       <a class="details"
           href="https://goal-life.com/page/method/matrix-eisenhower">
           Want more details?</a>
@@ -28,14 +28,14 @@
             <label class="task">Pay Bills</label>
             <input type="text" class="task">
             <button class="edit">Edit</button>
-            <button class="delete"><img src="./remove.svg"></button>
+            <button class="delete"><img src="./remove.svg" alt="remove"></button>
           </li>
           <li class="edit-mode item">
             <input type="checkbox">
             <label class="task">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task">
             <button class="edit">Save</button>
-            <button class="delete"><img src="./remove.svg"></button>
+            <button class="delete"><img src="./remove.svg" alt="remove"></button>
           </li>
         </ul>
       </section>
@@ -47,7 +47,7 @@
             <label class="task">See the Doctor</label>
             <input type="text" class="task">
             <button class="edit">Edit</button>
-            <button class="delete"><img src="./remove.svg"></button>
+            <button class="delete"><img src="./remove.svg" alt="remove"></button>
           </li>
         </ul>
       </section>
