--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
       <section class="todo">
         <h3>Todo</h3>
         <ul id="todo-list" class="list">
-          <li class="item">
+          <li class="list__item">
             <input type="checkbox">
             <label class="task">Pay Bills</label>
             <input type="text" class="task">
             <button class="edit">Edit</button>
             <button class="delete"><img src="./remove.svg" alt="remove button"></button>
           </li>
-          <li class="edit-mode item">
+          <li class="edit-mode list__item">
             <input type="checkbox">
             <label class="task">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task">
@@ -42,7 +42,7 @@
       <section class="completed">
         <h3>Completed</h3>
         <ul id="completed" class="todo-list">
-          <li class="item">
+          <li class="list__item">
             <input type="checkbox" checked>
             <label class="task">See the Doctor</label>
             <input type="text" class="task">
